tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Homelessness_Episode_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Homelessness_Episode_Start_Date__c</fullName>
    <inlineHelpText>Date this current episode of homelessness began.</inlineHelpText>
    <label>Homelessness Episode Start Date</label>
    <type>Date</type>
</CustomField>