tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Hometown__c.field-meta.xml
<CustomField>
    <fullName>Hometown__c</fullName>
    <inlineHelpText>Where is the participant from originally? (City, State)</inlineHelpText>
    <label>Hometown</label>
    <length>100</length>
    <type>Text</type>
</CustomField>