tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Week__c</fullName>
    <inlineHelpText>Average hours worked per week.</inlineHelpText>
    <label>Hours Per Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>