tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Housing_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Housing_Challenges__c</fullName>
    <inlineHelpText>What are the biggest barriers to obtaining and maintaining housing?</inlineHelpText>
    <label>Housing Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>