tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Housing_Goals__c.field-meta.xml
<CustomField>
    <fullName>Housing_Goals__c</fullName>
    <inlineHelpText>Housing goals and desired living situation.</inlineHelpText>
    <label>Housing Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>