tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Housing_Program_Experience__c.field-meta.xml
<CustomField>
    <fullName>Housing_Program_Experience__c</fullName>
    <inlineHelpText>Prior experience with housing programs, transitional housing, or supportive housing.</inlineHelpText>
    <label>Housing Program Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>