tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <inlineHelpText>Select all income sources that apply.</inlineHelpText>
    <label>Income Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Earned Income</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>SSDI</fullName>
            </value>
            <value>
                <fullName>Veteran&apos;s Disability</fullName>
            </value>
            <value>
                <fullName>Private Disability</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Comp</fullName>
            </value>
            <value>
                <fullName>TANF</fullName>
            </value>
            <value>
                <fullName>General Assistance</fullName>
            </value>
            <value>
                <fullName>Retirement (Social Security)</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Alimony</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>