tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Interaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interaction Summary</label>
    <referenceTo>InteractionSummary</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>