tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Interested_in_GED__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_GED__c</fullName>
    <inlineHelpText>Is this person interested in obtaining a GED?</inlineHelpText>
    <label>Interested in GED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Already Have GED/Diploma</fullName>
                <isActive>false</isActive>
                <label>Already Have GED/Diploma</label>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
                <isActive>false</isActive>
                <label>Client Doesn&apos;t Know</label>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefers Not to Answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>