tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Interrupted_Attempt_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Interrupted_Attempt_Lifetime__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has there been a time when you started to do something to end your life but someone or something stopped you before you actually did anything?</inlineHelpText>
    <label>Interrupted Attempt - Lifetime</label>
    <type>Checkbox</type>
</CustomField>