tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Interrupted_Attempts_Description__c.field-meta.xml
<CustomField>
    <fullName>Interrupted_Attempts_Description__c</fullName>
    <label>Interrupted Attempts Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>