tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Juvenile_Justice_Duration__c.field-meta.xml
<CustomField>
    <fullName>Juvenile_Justice_Duration__c</fullName>
    <inlineHelpText>How long was this person involved with juvenile justice? (e.g., &quot;1 year&quot;, &quot;6 months&quot;)</inlineHelpText>
    <label>Juvenile Justice Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than one year</fullName>
            </value>
            <value>
                <fullName>1-3 years</fullName>
            </value>
            <value>
                <fullName>3-5+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>