tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Last_Grade_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Grade_Completed__c</fullName>
    <inlineHelpText>Highest grade or level of education completed.</inlineHelpText>
    <label>Last Grade Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than grade 5</fullName>
            </value>
            <value>
                <fullName>5th grade</fullName>
            </value>
            <value>
                <fullName>6th grade</fullName>
            </value>
            <value>
                <fullName>7th grade</fullName>
            </value>
            <value>
                <fullName>8th grade</fullName>
            </value>
            <value>
                <fullName>9th grade</fullName>
            </value>
            <value>
                <fullName>10th grade</fullName>
            </value>
            <value>
                <fullName>11th grade</fullName>
            </value>
            <value>
                <fullName>12th grade / High School Diploma</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Some College</fullName>
            </value>
            <value>
                <fullName>Associate&apos;s</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Vocational</fullName>
            </value>
            <value>
                <fullName>Client doesn&apos;t know</fullName>
            </value>
            <value>
                <fullName>Client refused</fullName>
            </value>
            <value>
                <fullName>Associate&apos;s Degree</fullName>
                <isActive>false</isActive>
                <label>Associate&apos;s Degree</label>
            </value>
            <value>
                <fullName>Bachelor&apos;s Degree</fullName>
                <isActive>false</isActive>
                <label>Bachelor&apos;s Degree</label>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
                <isActive>false</isActive>
                <label>Data Not Collected</label>
            </value>
            <value>
                <fullName>Grade 12/High School Diploma/GED</fullName>
                <isActive>false</isActive>
                <label>Grade 12/High School Diploma/GED</label>
            </value>
            <value>
                <fullName>Grades 5-6</fullName>
                <isActive>false</isActive>
                <label>Grades 5-6</label>
            </value>
            <value>
                <fullName>Grades 7-8</fullName>
                <isActive>false</isActive>
                <label>Grades 7-8</label>
            </value>
            <value>
                <fullName>Grades 9-11</fullName>
                <isActive>false</isActive>
                <label>Grades 9-11</label>
            </value>
            <value>
                <fullName>Graduate Degree</fullName>
                <isActive>false</isActive>
                <label>Graduate Degree</label>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefers Not to Answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>