tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Last_Permanent_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Permanent_Address_Type__c</fullName>
    <inlineHelpText>HMIS-compliant housing type for last permanent address.</inlineHelpText>
    <label>Last Permanent Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foster care home or foster care group home</fullName>
            </value>
            <value>
                <fullName>Jail, Prison or Other Juvenile Facility</fullName>
            </value>
            <value>
                <fullName>Substance Abuse Treatment Facility or Detox Center</fullName>
            </value>
            <value>
                <fullName>Residential project of halfway house with no homeless criteria</fullName>
            </value>
            <value>
                <fullName>Owned by Client, No Housing Subsidy</fullName>
            </value>
            <value>
                <fullName>Owned by Client, With Housing Subsidy</fullName>
            </value>
            <value>
                <fullName>Rental by client, with no ongoing housing subsidy</fullName>
            </value>
            <value>
                <fullName>Rental by Client, with other ongoing housing subsidy</fullName>
            </value>
            <value>
                <fullName>Staying or Living in a Family Member&apos;s Room, Apartment or House</fullName>
            </value>
            <value>
                <fullName>Staying or Living in a Friend&apos;s Room, Apartment, or House</fullName>
            </value>
            <value>
                <fullName>Permanent Housing for Formerly Homeless Persons</fullName>
            </value>
            <value>
                <fullName>Transitional Housing for Homeless Persons (including homeless youth)</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Client Refused</fullName>
            </value>
            <value>
                <fullName>Data not collected</fullName>
            </value>
            <value>
                <fullName>Emergency shelter</fullName>
                <isActive>false</isActive>
                <label>Emergency shelter</label>
            </value>
            <value>
                <fullName>Host Home (non-crisis)</fullName>
                <isActive>false</isActive>
                <label>Host Home (non-crisis)</label>
            </value>
            <value>
                <fullName>Hotel/Motel paid by organization</fullName>
                <isActive>false</isActive>
                <label>Hotel/Motel paid by organization</label>
            </value>
            <value>
                <fullName>Interim housing</fullName>
                <isActive>false</isActive>
                <label>Interim housing</label>
            </value>
            <value>
                <fullName>Owned by client (no subsidy)</fullName>
                <isActive>false</isActive>
                <label>Owned by client (no subsidy)</label>
            </value>
            <value>
                <fullName>Owned by client (with subsidy)</fullName>
                <isActive>false</isActive>
                <label>Owned by client (with subsidy)</label>
            </value>
            <value>
                <fullName>Permanent Supportive Housing</fullName>
                <isActive>false</isActive>
                <label>Permanent Supportive Housing</label>
            </value>
            <value>
                <fullName>Place not meant for habitation</fullName>
                <isActive>false</isActive>
                <label>Place not meant for habitation</label>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefers Not to Answer</label>
            </value>
            <value>
                <fullName>Rental by client (private market)</fullName>
                <isActive>false</isActive>
                <label>Rental by client (private market)</label>
            </value>
            <value>
                <fullName>Rental by client (subsidized)</fullName>
                <isActive>false</isActive>
                <label>Rental by client (subsidized)</label>
            </value>
            <value>
                <fullName>Safe Haven</fullName>
                <isActive>false</isActive>
                <label>Safe Haven</label>
            </value>
            <value>
                <fullName>Transitional housing</fullName>
                <isActive>false</isActive>
                <label>Transitional housing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>