tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Legal_History__c.field-meta.xml
<CustomField>
    <fullName>Legal_History__c</fullName>
    <inlineHelpText>History of legal involvement or issues.</inlineHelpText>
    <label>Legal History</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>