tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Legal_Needs__c.field-meta.xml
<CustomField>
    <fullName>Legal_Needs__c</fullName>
    <inlineHelpText>Legal support or advocacy needs.</inlineHelpText>
    <label>Legal Needs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>