tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Legal_System_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Legal_System_Involvement__c</fullName>
    <inlineHelpText>Is this person currently involved with the legal system?</inlineHelpText>
    <label>Legal System Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
                <isActive>false</isActive>
                <label>Client Doesn&apos;t Know</label>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefers Not to Answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>