tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Length_of_Stay_Prior_Situation__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay_Prior_Situation__c</fullName>
    <inlineHelpText>How long was the client in their prior living situation?</inlineHelpText>
    <label>Length of Stay in Prior Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One night or less</fullName>
            </value>
            <value>
                <fullName>Two to six nights</fullName>
            </value>
            <value>
                <fullName>One week or more, but less than one month</fullName>
            </value>
            <value>
                <fullName>One month or more, but less than 90 days</fullName>
            </value>
            <value>
                <fullName>90 days or more, but less than one year</fullName>
            </value>
            <value>
                <fullName>One year or longer</fullName>
            </value>
            <value>
                <fullName>Client doesn&apos;t know</fullName>
            </value>
            <value>
                <fullName>Client refused</fullName>
            </value>
            <value>
                <fullName>Data not collected</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefers Not to Answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>