tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Lifetime_Most_Severe_Description__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Most_Severe_Description__c</fullName>
    <inlineHelpText>The following features should be rated with respect to the most severe type of ideation (i.e., 1-5 from above, with 1 being the least severe and 5 being the most severe). Ask about time he/she/they were feeling the most suicidal.</inlineHelpText>
    <label>Lifetime - Most Severe Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>