tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Living_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Living_Concerns__c</fullName>
    <inlineHelpText>What concerns you most about living on your own?</inlineHelpText>
    <label>Living Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>