tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Meaningful_Activities__c.field-meta.xml
<CustomField>
    <fullName>Meaningful_Activities__c</fullName>
    <inlineHelpText>Activities and hobbies that are meaningful to the client.</inlineHelpText>
    <label>Meaningful Activities</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>