tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Medical_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Provider_Name__c</fullName>
    <inlineHelpText>Name of current primary care provider or doctor.</inlineHelpText>
    <label>Medical Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>