tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Medical_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Medical_Provider_Phone__c</fullName>
    <inlineHelpText>Phone number for medical provider.</inlineHelpText>
    <label>Medical Provider Phone</label>
    <type>Phone</type>
</CustomField>