tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Mental_Health_Disability__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Disability__c</fullName>
    <inlineHelpText>Does this person have a mental health disability?</inlineHelpText>
    <label>Mental Health Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Client doesn&apos;t know</fullName>
            </value>
            <value>
                <fullName>Client refused</fullName>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
                <isActive>false</isActive>
                <label>Data Not Collected</label>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
                <isActive>false</isActive>
                <label>Prefers Not to Answer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>