tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Mental_Health_Disability_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Disability_Long_Term__c</fullName>
    <inlineHelpText>Is the mental health disability expected to be of long-continued and indefinite duration (12+ months)?</inlineHelpText>
    <label>Mental Health Disability Long-Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>