tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Mental_Health_History__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_History__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the client ever been involved with a therapist or psychiatrist in the past?</inlineHelpText>
    <label>Mental Health History</label>
    <type>Checkbox</type>
</CustomField>