tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Mental_Health_Hospitalizations__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Hospitalizations__c</fullName>
    <inlineHelpText>Number of times hospitalized for mental health reasons.</inlineHelpText>
    <label>Mental Health Hospitalizations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>