tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Military_Service__c.field-meta.xml
<CustomField>
    <fullName>Military_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the client served in the military?</inlineHelpText>
    <label>Military Service</label>
    <type>Checkbox</type>
</CustomField>