tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Most_Lethal_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Lethal_Attempt_Date__c</fullName>
    <label>Most Lethal Attempt Date</label>
    <type>Date</type>
</CustomField>