tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Most_Lethal_Potential_Lethality__c.field-meta.xml
<CustomField>
    <fullName>Most_Lethal_Potential_Lethality__c</fullName>
    <label>Most Lethal Potential Lethality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potential_Lethality</valueSetName>
    </valueSet>
</CustomField>