tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Most_Recent_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Attempt_Date__c</fullName>
    <label>Most Recent Attempt Date</label>
    <type>Date</type>
</CustomField>