tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/Motivation_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Motivation_for_Change__c</fullName>
    <inlineHelpText>What motivates you to make changes in your life?</inlineHelpText>
    <label>Motivation for Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>