tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/MSE_Affect__c.field-meta.xml
<CustomField>
    <fullName>MSE_Affect__c</fullName>
    <inlineHelpText>Mental Status Exam - Affect observation</inlineHelpText>
    <label>MSE - Affect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Constricted</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Labile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>