tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/MSE_Appearance__c.field-meta.xml
<CustomField>
    <fullName>MSE_Appearance__c</fullName>
    <inlineHelpText>Mental Status Exam - General appearance observation</inlineHelpText>
    <label>MSE - Appearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neat</fullName>
            </value>
            <value>
                <fullName>Disheveled</fullName>
            </value>
            <value>
                <fullName>Inappropriate</fullName>
            </value>
            <value>
                <fullName>Bizarre</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>