tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/MSE_Attention__c.field-meta.xml
<CustomField>
    <fullName>MSE_Attention__c</fullName>
    <inlineHelpText>Mental Status Exam - Cognition: Attention observation</inlineHelpText>
    <label>MSE - Attention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Distracted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>