tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/MSE_Behavior__c.field-meta.xml
<CustomField>
    <fullName>MSE_Behavior__c</fullName>
    <inlineHelpText>Mental Status Exam - Behavior observation</inlineHelpText>
    <label>MSE - Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooperative</fullName>
            </value>
            <value>
                <fullName>Guarded</fullName>
            </value>
            <value>
                <fullName>Hyperactive</fullName>
            </value>
            <value>
                <fullName>Agitated</fullName>
            </value>
            <value>
                <fullName>Paranoid</fullName>
            </value>
            <value>
                <fullName>Stereotyped</fullName>
            </value>
            <value>
                <fullName>Aggressive</fullName>
            </value>
            <value>
                <fullName>Bizarre</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>