tgthrProgramManagement/force-app/main/default/objects/Assessment__c/fields/MSE_Behavior_Comments__c.field-meta.xml
<CustomField>
    <fullName>MSE_Behavior_Comments__c</fullName>
    <inlineHelpText>Mental Status Exam - Behavior comments</inlineHelpText>
    <label>MSE - Behavior Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>